test/errors/undefined-macro.rom
Error in `undefined-macro.asm` on line 2: Macro `test` was not defined
